--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: hsl(218, 23%, 16%);
+    font-family: "Manrope", sans-serif;
 }
+
+
+
