--- a/src/index.css
+++ b/src/index.css
@@ -131,3 +131,70 @@
         margin-top: 8px;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .advice {
+        background-color: hsl(218, 23%, 16%);
+        height: 100vh;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .advice-container {
+        background: hsl(217, 19%, 24%);
+        width: 50%;
+        margin: 0 auto;
+        height: 320px;
+        border-radius: 8px;
+        padding: 30px;
+
+        position: relative;
+    }
+
+    .advice-number {
+        text-align: center;
+        color: hsl(150 , 100%, 66%);
+        font-size: 20px;
+        letter-spacing: 2px;
+    }
+
+    .advice-text {
+        font-size: 30px;
+        font-weight: 800;
+        margin: 0 auto;
+        width: 95%;
+        text-align: center;
+        color: hsl(193, 38%, 86%);
+        margin-top: 5%;
+    }
+
+    .pattern-divider {
+        margin-top: 5%;
+        background-image: url("../public/images/pattern-divider-desktop.svg");
+        background-repeat: no-repeat;
+        background-position: center;
+        height: 20px;
+    }
+
+    .dice-container {
+        background-color: hsl(150, 100%, 66%);
+        margin: 0 auto;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        padding: 10px;
+        text-align: center;
+
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+
+    .dice-container img {
+        margin-top: 8px;
+    }
+}
