--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,18 @@
         height: 320px;
         border-radius: 8px;
         padding: 30px;
+        border: none;
 
         position: relative;
+    }
+
+    #loading,
+    #get-advice {
+        text-align: center;
+        font-size: 15px;
+        color: hsl(150 , 100%, 66%);
+        font-weight: 800;
+        letter-spacing: 2px;
     }
 
     .advice-number {
@@ -53,6 +63,7 @@
         border-radius: 50%;
         padding: 10px;
         text-align: center;
+        border: none;
 
         position: absolute;
         top: 100%;
@@ -85,6 +96,15 @@
         padding: 30px;
 
         position: relative;
+    }
+
+    #loading,
+    #get-advice {
+        text-align: center;
+        font-size: 20px;
+        color: hsl(150 , 100%, 66%);
+        font-weight: 800;
+        letter-spacing: 2px;
     }
 
     .advice-number {
@@ -120,6 +140,7 @@
         border-radius: 50%;
         padding: 10px;
         text-align: center;
+        border: none;
 
         position: absolute;
         top: 100%;
@@ -152,6 +173,15 @@
         padding: 30px;
 
         position: relative;
+    }
+
+    #loading,
+    #get-advice {
+        text-align: center;
+        font-size: 20px;
+        color: hsl(150 , 100%, 66%);
+        font-weight: 800;
+        letter-spacing: 2px;
     }
 
     .advice-number {
@@ -187,6 +217,7 @@
         border-radius: 50%;
         padding: 10px;
         text-align: center;
+        border: none;
 
         position: absolute;
         top: 100%;
