--- a/src/index.css
+++ b/src/index.css
@@ -42,17 +42,24 @@
         font-weight: 800;
         margin: 0 auto;
         width: 95%;
+        height: fit-content;
         text-align: center;
         color: hsl(193, 38%, 86%);
         margin-top: 5%;
     }
 
     .pattern-divider {
-        margin-top: 9%;
+        /* margin-top: 9%; */
+        width: 300px;
         background-image: url("../public/images/pattern-divider-mobile.svg");
         background-repeat: no-repeat;
         background-position: center;
         height: 20px;
+
+        position: absolute;
+        top: 75%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .dice-container {
@@ -125,11 +132,16 @@
     }
 
     .pattern-divider {
-        margin-top: 4%;
-        background-image: url("../public/images/pattern-divider-mobile.svg");
+        width: 500px;
+        background-image: url("../public/images/pattern-divider-desktop.svg");
         background-repeat: no-repeat;
         background-position: center;
         height: 20px;
+
+        position: absolute;
+        top: 76%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .dice-container {
@@ -202,11 +214,16 @@
     }
 
     .pattern-divider {
-        margin-top: 5%;
+        width: 500px;
         background-image: url("../public/images/pattern-divider-desktop.svg");
         background-repeat: no-repeat;
         background-position: center;
         height: 20px;
+
+        position: absolute;
+        top: 73%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
     .dice-container {
